# LimitOrderBook

./: .gitignore  CmakeLists.txt  LICENSE  README.md
analysis/1_BaseSetup/: TimingAnalysis.ipynb
analysis/2_CompareWithTree/: TimingAnalysis.ipynb
analysis/First Trial/: TimingAnalysis.ipynb
src/: Order.hpp  OrderBook.cpp  OrderBook.hpp  main.cpp
tests/: BenchmarkingTest.cpp  CMakeLists.txt  GenerateOrders.cpp  GenerateOrders.hpp  OrderBookUnitTest.cpp  OrderPipeline.cpp  OrderPipeline.hpp
